# pychat

./: .gitignore  CHANGELOG  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test.py
core/: bing.py  browser.py  ch4usto.py  chatgptspanish.py  copilot.py  duck.py  gpt4free.py  hix.py  openai.py  openchat.py  seleniumbrowser.py  translator.py  watson.py  wrtnai.py  you.py
core/helpers/: binghelper.py  tempemail.py
gui/: backend.py  javascriptwindow.py  main.py  mainwindow.py  seleniumbrowser.py  webbrowser.py
gui/assets/css/: style.css
gui/assets/js/: app.js
gui/templates/: index.html
pychat/: __main__.py  app.py  backend.py
pychat/assets/css/: lato.css  style.css
pychat/assets/js/: app.js
pychat/resources/: base.html
tests/: bug.py  pychat.py
