[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gui"
version = "0.1.0"
description = "GUI of pyChat core"
authors = ["bitstuffing <bitstuffing@github.io>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.scripts]
gui = "gui.main:main"
